poetry and pylock updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pyarrow = "^18.0.0"
 dapla-toolbelt = "^3.0.2"
 polars = "^1.14.0"
 ipykernel = "^6.29.5"
+nox = "^2024.10.9"
 
 [[tool.mypy.overrides]]
 module = [
